<resources>
    <string name="app_name">CourseTable</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="back">Back</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="setting">setting</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="xxx">xxx</string>
    <string name="button">Button</string>
    <string name="className">Class Name</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="submit">submit</string>
</resources>